# airmusic_information

./: Bravura_test_sample_v1.rtf  Docker  README.md  auto_speech.ipynb  auto_speech_v1.0.ipynb  auto_speech_v1.1.ipynb  auto_speech_v1.2.ipynb  auto_speech_v1_3_1.ipynb  main.py  note2unicode_v2.3.ipynb  note2unicode_v2.3.py  note2unicode_v2.6_pycharm.py  package.json  pyproject.toml
Text2unicode/: mxl2data_v2_3.py  note2unicode_v2.7_pycharm.py
musicautobot/serve/api/: predict.py
pages/: ABTestOnConvertion.py  App_Course_Guide.py  App_Course_Sonata.py  BrandGuide.py  DevEvironment.py  DevReference.py  Inbox.py  Midi_Play.py  OfficeLocation.py  PitchDeck.py  Play_Course_Guide.py  Readme.py  TestDevice.py
steamlit_data/: Concertino in D, Op 15 (3rd mvt ).sib
streamlit_data/app_course/: Andante sostenuto.musicxml  Concertino in D, Op 15 (3rd mvt ).musicxml  Concertino_in_D_Op15_3rd.mxl  Sonata in G, 3rd mvt.musicxml  Sonata_in_G_3rd_mvt.mxl  user_play.musicxml
utils/: lily_utilys.py  utils.py
