[tool.poetry]
name = "airmusic_information"
version = "0.1.0"
description = ""
authors = ["victor <em3888@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,>3.11"
numpy = "^1.23.0"
altair = "^4.2.0"
pandas = "^1.4.3"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
