[tool.poetry]
name = "airmusic_information"
version = "0.1.0"
description = ""
authors = ["victor <em3888@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
music21= "5.7.2"
streamlit = "^1.10.0"
watchdog = "^2.1.9"
Flask = "^2.1.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
